# umap-dsfr

./: .gitignore  MANIFEST.in  Makefile  README.md  deploy.md  package-lock.json  package.json  purgecss.config.js  pyproject.toml
scripts/: vendorsjs.sh
umap_dsfr/: moncomptepro.py  proconnect.py  urls.py  utils.py  views.py
umap_dsfr/blog/: 2024-06-10-risque-inondation.md  2024-06-18-infolettre-1.md  2024-07-10-chambres-agriculture.md  2024-09-06-terres-confluences.md  2024-09-18-carte-subventions-europeennes.md  2024-09-19-presenter-ressources-pedagogiques.md  2024-10-28-carte-services-publics.md  2024-11-27-umap-itineraire-velo.md  2025-01-21-zones-inondables.md  2025-01-22-umap-formation-recherche.md  2025-01-30-umap-agents-publics-chiffres.md  2025-03-28-interoperabilite-qgis.md  2025-03-29-maths-umap-et-plus.md  2025-04-17-mission-mayotte.md
umap_dsfr/infolettres/: 2024-06-18-infolettre-1.md  2024-06-18-infolettre.md  2024-07-02-infolettre.md  2024-07-18-infolettre.md  2024-09-24-infolettre.md  2024-10-24-infolettre.md  2024-11-29-infolettre.md  2024-12-19-infolettre.md  2025-01-31-infolettre.md  2025-02-28-infolettre.md  2025-03-31-infolettre.md  2025-05-15-infolettre.md  2025-06-18-infolettre.md  2025-06-26-infolettre.md
umap_dsfr/management/commands/: migrate_pictograms.py
umap_dsfr/static/umap/: theme.css  theme.js
umap_dsfr/templates/auth/: user_detail.html  user_stars.html
umap_dsfr/templates/umap/: article.html  blog_article.html  blog_list.html  content.html  content_footer.html  footer.html  home.html  infolettres.html  map_list.html  (+9 more)
(+3 files in other folders)
